--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "meetapp",
   "version": "0.1.0",
+  "homepage": "https://shariqahmed1.github.io/React-meetup-app-with-firebase",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.2.1",
@@ -22,6 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
